--- a/src/Style/Navbar.module.css
+++ b/src/Style/Navbar.module.css
@@ -1,25 +1,3 @@
-/* .nav_container{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    background-color: pink;
-    height: 10vh;
-    width: 100%;
-    align-items: center;
-}
-.nav_container h1{
-    color:aqua;
-    text-align: center;
-    padding: 0.5em;
-}
-.nav_buttons button{
-    width: 8em;
-    height: 4em;
-    border-radius: 15px;
-    border-color: transparent;
-    margin: 1em;
-} */
-
                 
 .navContainer{
 width: 100%;
@@ -44,18 +22,13 @@ justify-content: center;
     margin-right: 1em;
     cursor: pointer;
 }
-/* .links :hover{
-    color:red !important;
-} */
 .hamburgerLinks{
     text-decoration: none;
     color:gray;
     font-weight: bold;
     border-bottom: 1px solid grey;
 }
-/* .hamburgerLinks :hover{
-    color: rgb(99, 98, 98);
-} */
+
 @media only screen and (max-width: 900px) {
     .links {
         all:unset;
@@ -67,6 +40,7 @@ justify-content: center;
         border: 1px solid transparent;
         background-color: #f1e7e7b8;
         border-radius: 25px;
+        cursor: pointer;
     }
     .evilImage{
         width: 270px;
